@@ -1,3 +1,8 @@
+Tue Oct 19 09:59:22 EDT 1999 Ben Collins <bcollins.debian.org>
+
+  * Reverted the new tmpfile stuff in dpkg-deb. For some reason it's
+    completely corrupting the new package
+
 Mon Oct 18 18:40:35 EDT 1999 Ben Collins <bcollins.debian.org>
 
   * Reimplemented a better *stat cache for the removal checking code,
